@@ -1,10 +1,11 @@
 package com.healthassistant.infrastructure.web.security;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.healthassistant.application.authentication.port.DeviceSecretProvider;
 import com.healthassistant.application.authentication.port.NonceCache;
+import com.healthassistant.config.AppProperties;
 import com.healthassistant.domain.event.DeviceId;
 import com.healthassistant.dto.ErrorResponse;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -13,110 +14,86 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.format.DateTimeParseException;
-import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
 @Slf4j
 class HmacAuthenticationFilter extends OncePerRequestFilter {
 
-    private static final String HEADER_DEVICE_ID = "X-Device-Id";
-    private static final String HEADER_TIMESTAMP = "X-Timestamp";
-    private static final String HEADER_NONCE = "X-Nonce";
-    private static final String HEADER_SIGNATURE = "X-Signature";
-
     private final DeviceSecretProvider deviceSecretProvider;
     private final NonceCache nonceCache;
+    private final AppProperties appProperties;
     private final ObjectMapper objectMapper;
 
     @Override
     protected void doFilterInternal(
-            @NonNull HttpServletRequest request,
-            @NonNull HttpServletResponse response,
-            @NonNull FilterChain filterChain
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
     ) throws ServletException, IOException {
-
-        if (!request.getRequestURI().startsWith("/v1/health-events")) {
+        String path = request.getRequestURI();
+        
+        if (!path.startsWith("/v1/daily-summaries")) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        CachedBodyHttpServletRequest wrappedRequest = new CachedBodyHttpServletRequest(request);
-
         try {
-            DeviceId deviceId = validateHmacAuthentication(wrappedRequest);
-            wrappedRequest.setAttribute("deviceId", deviceId.value());
-            filterChain.doFilter(wrappedRequest, response);
+            DeviceId deviceId = validateHmacAuthentication(request);
+            request.setAttribute("deviceId", deviceId.value());
+            filterChain.doFilter(request, response);
         } catch (HmacAuthenticationException e) {
             log.warn("HMAC authentication failed: {}", e.getMessage());
-            sendError(response, e.getMessage());
+            sendErrorResponse(response, e.getMessage());
         }
     }
 
-    private DeviceId validateHmacAuthentication(CachedBodyHttpServletRequest request)
+    private DeviceId validateHmacAuthentication(HttpServletRequest request)
             throws HmacAuthenticationException {
-
-        String deviceIdStr = request.getHeader(HEADER_DEVICE_ID);
-        String timestampStr = request.getHeader(HEADER_TIMESTAMP);
-        String nonce = request.getHeader(HEADER_NONCE);
-        String signature = request.getHeader(HEADER_SIGNATURE);
-
-        validateHeadersPresent(deviceIdStr, timestampStr, nonce, signature);
+        String deviceIdStr = extractHeader(request, "X-Device-Id");
+        String timestampStr = extractHeader(request, "X-Timestamp");
+        String nonce = extractHeader(request, "X-Nonce");
+        String signature = extractHeader(request, "X-Signature");
 
         DeviceId deviceId = DeviceId.of(deviceIdStr);
-        byte[] secret = deviceSecretProvider.getSecret(deviceId)
+        byte[] secret = deviceSecretProvider.getSecret(deviceId.value())
                 .orElseThrow(() -> new HmacAuthenticationException("Unknown device ID: " + deviceId.value()));
+
+        if (nonceCache.isUsed(deviceId.value(), nonce)) {
+            throw new HmacAuthenticationException("Nonce already used (replay attack detected)");
+        }
 
         Instant timestamp = parseTimestamp(timestampStr);
         validateTimestamp(timestamp);
 
-        if (nonceCache.isUsed(deviceId, nonce)) {
-            throw new HmacAuthenticationException("Nonce already used (replay attack detected)");
-        }
+        String method = request.getMethod();
+        String path = request.getRequestURI();
+        String body = getRequestBody(request);
 
-        byte[] body = request.getCachedBody();
-        String bodyStr = new String(body, StandardCharsets.UTF_8);
-
-        String expectedSignature = HmacSignature.calculate(
-                request.getMethod(),
-                request.getRequestURI(),
-                timestampStr,
-                nonce,
-                deviceId,
-                bodyStr,
-                secret
-        );
+        String canonicalString = buildCanonicalString(method, path, timestampStr, nonce, deviceId.value(), body);
+        String expectedSignature = HmacSignature.calculate(canonicalString, secret);
 
         if (!HmacSignature.verify(expectedSignature, signature)) {
             throw new HmacAuthenticationException("Invalid signature");
         }
 
-        nonceCache.markAsUsed(deviceId, nonce);
+        nonceCache.markAsUsed(deviceId.value(), nonce);
         return deviceId;
     }
 
-    private void validateHeadersPresent(String deviceId, String timestamp, String nonce, String signature)
+    private String extractHeader(HttpServletRequest request, String headerName)
             throws HmacAuthenticationException {
-        if (deviceId == null || deviceId.isBlank()) {
-            throw new HmacAuthenticationException("Missing X-Device-Id header");
+        String value = request.getHeader(headerName);
+        if (value == null || value.isBlank()) {
+            throw new HmacAuthenticationException("Missing " + headerName + " header");
         }
-        if (timestamp == null || timestamp.isBlank()) {
-            throw new HmacAuthenticationException("Missing X-Timestamp header");
-        }
-        if (nonce == null || nonce.isBlank()) {
-            throw new HmacAuthenticationException("Missing X-Nonce header");
-        }
-        if (signature == null || signature.isBlank()) {
-            throw new HmacAuthenticationException("Missing X-Signature header");
-        }
+        return value;
     }
 
     private Instant parseTimestamp(String timestampStr) throws HmacAuthenticationException {
@@ -129,25 +106,33 @@ class HmacAuthenticationFilter extends OncePerRequestFilter {
 
     private void validateTimestamp(Instant timestamp) throws HmacAuthenticationException {
         Instant now = Instant.now();
-        long toleranceSeconds = 600;
-        if (timestamp.isBefore(now.minusSeconds(toleranceSeconds)) ||
-                timestamp.isAfter(now.plusSeconds(toleranceSeconds))) {
+        long toleranceSeconds = appProperties.getHmac().getToleranceSeconds();
+        long diffSeconds = Math.abs(now.getEpochSecond() - timestamp.getEpochSecond());
+
+        if (diffSeconds > toleranceSeconds) {
             throw new HmacAuthenticationException("Timestamp out of acceptable range (tolerance: " + toleranceSeconds + "s)");
         }
     }
 
-    private void sendError(HttpServletResponse response, String message)
-            throws IOException {
+    private String buildCanonicalString(String method, String path, String timestamp, String nonce, String deviceId, String body) {
+        return String.join("\n", method, path, timestamp, nonce, deviceId, body != null ? body : "");
+    }
+
+    private String getRequestBody(HttpServletRequest request) {
+        return "";
+    }
+
+    private void sendErrorResponse(HttpServletResponse response, String message) throws IOException {
         response.setStatus(HttpStatus.UNAUTHORIZED.value());
         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
 
         ErrorResponse errorResponse = ErrorResponse.builder()
                 .code("HMAC_AUTH_FAILED")
                 .message(message)
-                .details(Collections.emptyList())
+                .details(java.util.List.of())
                 .build();
 
-        response.getWriter().write(objectMapper.writeValueAsString(errorResponse));
+        objectMapper.writeValue(response.getWriter(), errorResponse);
     }
 
     static class HmacAuthenticationException extends Exception {
